--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -9,6 +9,7 @@
 		<version>0.8.10-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
+	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.target</artifactId>
 	<version>0.8.10-SNAPSHOT</version>
 	<packaging>eclipse-target-definition</packaging>
@@ -47,7 +48,6 @@
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.target</artifactId>
 							<version>0.8.10-SNAPSHOT</version>
-							<classifier>org.enterprisedomain.target</classifier>
 						</artifact>
 					</target>
 					<executionEnvironment>JavaSE-11</executionEnvironment>
