Replace prepare & perform with deploy
Signed-off-by: Kyrill Zotkin <43617+kyrillzotkin@users.noreply.github.com >

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,4 @@ jobs:
        mvn -B clean package --file pom.xml
     - name: Deploy with Maven
       run: |
-       mvn release:prepare -s settings.xml
-       mvn clean install
-       mvn release:perform -s settings.xml
+       mvn deploy -s settings.xml
