--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.bundles</artifactId>
-		<version>0.8.10-SNAPSHOT</version>
+		<version>0.8.19</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.target</artifactId>
-	<version>0.8.10-SNAPSHOT</version>
+	<version>0.8.19</version>
 	<packaging>eclipse-target-definition</packaging>
 	<build>
 		<plugins>
@@ -47,7 +47,7 @@
 						<artifact>
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.target</artifactId>
-							<version>0.8.10-SNAPSHOT</version>
+							<version>0.8.19</version>
 						</artifact>
 					</target>
 					<executionEnvironment>JavaSE-11</executionEnvironment>
