--- a/examples/org.enterprisedomain.sample/pom.xml
+++ b/examples/org.enterprisedomain.sample/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>org.enterprisedomain.org.enterprisedomain</groupId>
 			<artifactId>update</artifactId>
-			<version>0.8.10-SNAPSHOT</version>
+			<version>0.8.19</version>
 		</dependency>
 	</dependencies>
 	<packaging>pom</packaging>	
