--- a/tests/org.enterprisedomain.classmaker.tests/pom.xml
+++ b/tests/org.enterprisedomain.classmaker.tests/pom.xml
@@ -33,7 +33,7 @@
 						<frameworkExtension>
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.classmaker.osgi.systemextension</artifactId>
-							<version>0.8.10-SNAPSHOT</version>
+							<version>0.8.19</version>
 						</frameworkExtension>
 					</frameworkExtensions>
 					<argLine>${surefire.moduleProperties}</argLine>
