--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
 						<configuration>
 							<artifacts>
 								<artifact>
-									<file>releng/org.enterprisedomain.target/org.enterprisedomain.target.target</file>
-									<classifier>org.enterprisedomain.target</classifier>
+									<file>${baseDir}/releng/org.enterprisedomain.target/org.enterprisedomain.target.target</file>
+									<type>target</type>
 								</artifact>
 							</artifacts>
 						</configuration>
