Move to 0.8.28-SNAPSHOT
Signed-off-by: Kyrill Zotkin <43617+kyrillzotkin@users.noreply.github.com >

--- a/release.properties
+++ b/release.properties
@@ -1,18 +1,18 @@
-project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker=0.8.28-SNAPSHOT
-project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.osgi.systemextension=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.osgi.systemextension=0.8.28-SNAPSHOT
-project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.edit=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.edit=0.8.28-SNAPSHOT
-project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.emfstore=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.emfstore=0.8.28-SNAPSHOT
-project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp=0.8.28-SNAPSHOT
-project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.filter=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.filter=0.8.28-SNAPSHOT
-project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.ui=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.ui=0.8.28-SNAPSHOT
-project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.workbench=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.workbench=0.8.28-SNAPSHOT
-project.rel.org.enterprisedomain\:org.enterprisedomain.target=0.8.28
-project.dev.org.enterprisedomain\:org.enterprisedomain.target=0.8.28-SNAPSHOT 
+project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker=0.8.37-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.osgi.systemextension=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.osgi.systemextension=0.8.37-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.edit=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.edit=0.8.37-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.emfstore=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.emfstore=0.8.37-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp=0.8.37-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.filter=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.filter=0.8.37-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.ui=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.ecp.ui=0.8.37-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.classmaker.workbench=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.classmaker.workbench=0.8.37-SNAPSHOT
+project.rel.org.enterprisedomain\:org.enterprisedomain.target=0.8.28-SNAPSHOT
+project.dev.org.enterprisedomain\:org.enterprisedomain.target=0.8.37-SNAPSHOT 
