--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,5 +29,5 @@ jobs:
        mvn -B clean package --file pom.xml
     - name: Deploy with Maven
       run: |
-       mvn clean deploy -s settings.xml
+       mvn clean deploy -s settings.xml -u Bearer -p ${{secrets.GITHUB_TOKEN}}
 
