--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 						<configuration>
 							<artifacts>
 								<artifact>
-									<file>releng/org.enterprisedomain.target/org.enterprisedomain.target.target</file>
+									<file>../../releng/org.enterprisedomain.target/org.enterprisedomain.target.target</file>
 									<type>target</type>
 								</artifact>
 							</artifacts>
