--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -48,6 +48,8 @@
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.target</artifactId>
 							<version>0.8.28-SNAPSHOT</version>
+							<file>../releng/org.enterprisedomain.target/org.enterprisedomain.target.target</file>
+							<type>target</type>
 						</artifact>
 					</target>
 					<executionEnvironment>JavaSE-11</executionEnvironment>
