Add Bintray as a release repo
Signed-off-by: Kyrill Zotkin <43617+kyrillzotkin@users.noreply.github.com >

--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.configuration</artifactId>
-	<version>0.8.28-SNAPSHOT</version>
+	<version>0.8.28</version>
 	<properties>
 		<tycho.version>1.7.0</tycho.version>
 		<tycho.extras.version>${tycho.version}</tycho.extras.version>
@@ -110,7 +110,7 @@
 						<artifact>
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.target</artifactId>
-							<version>0.8.28-SNAPSHOT</version>
+							<version>0.8.28</version>
 						</artifact>
 					</target>
 					<dependency-resolution>
@@ -239,10 +239,15 @@
 	</dependencies>
 	<packaging>pom</packaging>
 	<distributionManagement>
-			<repository>
-				<id>github</id>
-				<name>GitHub enterpriseDomain Apache Maven Packages</name>
-				<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url>
-			</repository>		
+		<snapshotRepository>
+			<id>github</id>
+			<name>GitHub enterpriseDomain Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url>
+		</snapshotRepository>
+		<repository>
+			<id>bintray-enterprisedomain-enterpriseDomain</id>
+			<name>enterprisedomain-enterpriseDomain</name>
+			<url>https://api.bintray.com/maven/enterprisedomain/enterpriseDomain/ClassMaker/;publish=1</url>
+		</repository>
 	</distributionManagement>
 </project>
