--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.configuration</artifactId>
-		<version>0.8.28-SNAPSHOT</version>
+		<version>0.8.28</version>
 		<relativePath>./releng/org.enterprisedomain.configuration</relativePath>
 	</parent>
 	<scm>
@@ -48,5 +48,5 @@
 			</properties>
 		</profile>
 	</profiles>
-	<version>0.8.28-SNAPSHOT</version>
+	<version>0.8.28</version>
 </project>
