--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
 		<artifactId>org.enterprisedomain.bundles</artifactId>
-		<version>0.8.28-SNAPSHOT</version>
+		<version>0.8.28</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	<groupId>org.enterprisedomain</groupId>
 	<artifactId>org.enterprisedomain.target</artifactId>
-	<version>0.8.28-SNAPSHOT</version>
+	<version>0.8.28</version>
 	<packaging>eclipse-target-definition</packaging>
 	<build>
 		<plugins>
@@ -47,7 +47,7 @@
 						<artifact>
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.target</artifactId>
-							<version>0.8.28-SNAPSHOT</version>
+							<version>0.8.28</version>
 							<file>../releng/org.enterprisedomain.target/org.enterprisedomain.target.target</file>
 							<type>target</type>
 						</artifact>
@@ -69,12 +69,12 @@
 								<type>eclipse-feature</type>
 								<groupId>org.enterprisedomain</groupId>
 								<artifactId>org.enterprisedomain.ui.workbench.rcp.feature</artifactId>
-								<version>0.8.28-SNAPSHOT</version>
+								<version>0.8.28</version>
 							</requirement>
 							<requirement>
 								<type>eclipse-plugin</type>
 								<artifactId>org.enterprisedomain.classmaker.osgi.systemextension</artifactId>
-								<version>0.8.28-SNAPSHOT</version>
+								<version>0.8.28</version>
 							</requirement>
 						</extraRequirements>
 					</dependency-resolution>
