--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,10 +27,16 @@ jobs:
     - name: Build with Maven      
       run:
        mvn -B clean package --file pom.xml
+    - name: Delete Package Versions
+      uses: actions/delete-package-versions@v1.0.2
+      with:
+       package-name: 'org.enterprisedomain.configuration'
+       num-old-versions-to-delete: 100
     - name: Deploy with Maven
       env:
        PAT: ${{ secrets.GITHUB_TOKEN }}
+       BT_PAT: ${{ secrets.BT_TOKEN }}
       run: |
-       echo "<?xml version=\"1.0\" encoding=\"UTF-8\" ?><settings xmlns='http://maven.apache.org/SETTINGS/1.0.0' xsi:schemaLocation='http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd' xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'><activeProfiles><activeProfile>github</activeProfile></activeProfiles><profiles><profile><id>github</id><repositories><repository><id>central</id><url>https://repo1.maven.org/maven2</url><releases><enabled>true</enabled></releases><snapshots><enabled>true</enabled></snapshots></repository><repository><id>github</id><name>GitHub enterpriseDomain Apache Maven Packages</name><url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url><snapshots><enabled>true</enabled></snapshots></repository></repositories></profile></profiles><servers><server><id>github</id><username>kyrillzotkin</username><password>$PAT</password></server></servers></settings>" > ~/.m2/settings.xml
+       echo "<?xml version=\"1.0\" encoding=\"UTF-8\" ?><settings xmlns='http://maven.apache.org/SETTINGS/1.0.0' xsi:schemaLocation='http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd' xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'><activeProfiles><activeProfile>github</activeProfile></activeProfiles><profiles><profile><id>github</id><repositories><repository><id>central</id><url>https://repo1.maven.org/maven2</url><releases><enabled>true</enabled></releases><snapshots><enabled>true</enabled></snapshots></repository><repository><id>github</id><name>GitHub enterpriseDomain Apache Maven Packages</name><url>https://maven.pkg.github.com/enterpriseDomain/ClassMaker</url><snapshots><enabled>true</enabled></snapshots></repository><repository><snapshots><enabled>false</enabled></snapshots><id>bintray-enterprisedomain-enterpriseDomain</id><name>bintray</name><url>https://dl.bintray.com/enterprisedomain/enterpriseDomain</url></repository></repositories><pluginRepositories><pluginRepository><snapshots><enabled>false</enabled></snapshots><id>bintray-enterprisedomain-enterpriseDomain</id><name>bintray-plugins</name><url>https://dl.bintray.com/enterprisedomain/enterpriseDomain</url></pluginRepository></pluginRepositories></profile></profiles><servers><server><id>github</id><username>kyrillzotkin</username><password>$PAT</password></server><server><id>bintray-enterprisedomain-enterpriseDomain</id><username>kyrillzotkin</username><password>$BT_PAT</password></server></servers></settings>" > ~/.m2/settings.xml
        mvn clean deploy -s ~/.m2/settings.xml
 
