--- a/bundles/org.enterprisedomain.classmaker/pom.xml
+++ b/bundles/org.enterprisedomain.classmaker/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>org.enterprisedomain.classmaker</artifactId>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
+		<artifactId>org.enterprisedomain.root</artifactId>
 		<version>0.8.28</version>
 		<relativePath>../../</relativePath>
 	</parent>
