--- a/bundles/org.enterprisedomain.ecp.ui/pom.xml
+++ b/bundles/org.enterprisedomain.ecp.ui/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
+		<artifactId>org.enterprisedomain.root</artifactId>
 		<version>0.8.28</version>
 		<relativePath>../../</relativePath>
 	</parent>
