--- a/features/org.enterprisedomain.classmaker.ecp.feature/pom.xml
+++ b/features/org.enterprisedomain.classmaker.ecp.feature/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>org.enterprisedomain.classmaker.ecp.feature</artifactId>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
+		<artifactId>org.enterprisedomain.root</artifactId>
 		<version>0.8.28</version>
 		<relativePath>../../</relativePath>
 	</parent>
