--- a/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
+++ b/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
@@ -6,7 +6,7 @@
 	
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.bundles</artifactId>
+		<artifactId>org.enterprisedomain.root</artifactId>
 		<version>0.8.28</version>
 		<relativePath>../../</relativePath>
 	</parent>
