--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -5,8 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.root</artifactId>
-		<version>0.8.28</version>
+		<artifactId>org.enterprisedomain.root</artifactId>		<version>0.8.28</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	<groupId>org.enterprisedomain</groupId>
