--- a/releng/org.enterprisedomain.workbench.product/pom.xml
+++ b/releng/org.enterprisedomain.workbench.product/pom.xml
@@ -6,8 +6,7 @@
 	<version>0.8.28</version>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.root</artifactId>
-		<version>0.8.28</version>
+		<artifactId>org.enterprisedomain.root</artifactId>		<version>0.8.28</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	<build>
