--- a/releng/org.enterprisedomain.update/pom.xml
+++ b/releng/org.enterprisedomain.update/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.root</artifactId>		<version>0.8.28</version>
+		<artifactId>org.enterprisedomain.root</artifactId>		<version>0.8.28-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	<artifactId>org.enterprisedomain.update</artifactId>
