--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,10 @@ jobs:
       run:
        mvn -B clean package --file pom.xml
     - name: Deploy with Maven
+      env:
+       PAT: ${{ secrets.GITHUB_TOKEN }}
+       BT_PAT: ${{ secrets.BT_TOKEN }}
       run: |
-       mvn clean deploy -s settings.xml
+       echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><settings xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.1.0 http://maven.apache.org/xsd/settings-1.1.0.xsd\" xmlns=\"http://maven.apache.org/SETTINGS/1.1.0\"xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"><servers><server><username>${security.getCurrentUsername()}</username><password>$BT_PAT</password><id>central</id></server><server><username>${security.getCurrentUsername()}</username><password>$BT_PAT</password><id>snapshots</id><server><servers><profiles><profile><repositories><repository><snapshots><enabled>false</enabled></snapshots><id>central</id><name>libs-release</name><url>https://oss.jfrog.org/artifactory/libs-release</url></repository><repository><snapshots/><id>snapshots</id><name>libs-snapshot</name><url>https://oss.jfrog.org/artifactory/libs-snapshot</url></repository></repositories><pluginRepositories><pluginRepository><snapshots><enabled>false</enabled></snapshots><id>central</id><name>plugins-release</name><url>https://oss.jfrog.org/artifactory/plugins-release</url></pluginRepository><pluginRepository><snapshots /><id>snapshots</id><name>plugins-release</name><url>https://oss.jfrog.org/artifactory/plugins-release</url></pluginRepository></pluginRepositories><id>artifactory</id></profile></profiles><activeProfiles><activeProfile>artifactory</activeProfile></activeProfiles></settings>" > ~/.m2/settings.xml
+       mvn clean deploy -s ~/.m2/settings.xml
 
