--- a/releng/org.enterprisedomain.configuration/pom.xml
+++ b/releng/org.enterprisedomain.configuration/pom.xml
@@ -301,12 +301,12 @@
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>OJO Snapshots</name>
-			<url>http://oss.jfrog.org/artifactory/oss-snapshot-local</url>
+			<url>https://oss.jfrog.org/artifactory/libs-snapshot</url>
 		</snapshotRepository>
 		<repository>
 			<id>central</id>
 			<name>OJO</name>
-			<url>http://oss.jfrog.org/artifactory/oss-release-local</url>
+			<url>https://oss.jfrog.org/artifactory/libs-release</url>
 		</repository>
 	</distributionManagement>
 </project>
