--- a/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
+++ b/features/org.enterprisedomain.classmaker.osgi.resolverhooks.feature/pom.xml
@@ -6,7 +6,8 @@
 	
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.root</artifactId>		<version>0.8.37-SNAPSHOT</version>
+		<artifactId>org.enterprisedomain.root</artifactId>
+		<version>0.8.37-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
 
