--- a/releng/org.enterprisedomain.target/pom.xml
+++ b/releng/org.enterprisedomain.target/pom.xml
@@ -5,7 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.enterprisedomain</groupId>
-		<artifactId>org.enterprisedomain.root</artifactId>		<version>0.8.37-SNAPSHOT</version>
+		<artifactId>org.enterprisedomain.root</artifactId>
+		<version>0.8.37-SNAPSHOT</version>
 		<relativePath>../../</relativePath>
 	</parent>
 	<groupId>org.enterprisedomain</groupId>
@@ -46,7 +47,8 @@
 						<artifact>
 							<groupId>org.enterprisedomain</groupId>
 							<artifactId>org.enterprisedomain.target</artifactId>
-							<version>0.8.37-SNAPSHOT</version>
+					
+		<version>0.8.37-SNAPSHOT</version>
 							<file>../releng/org.enterprisedomain.target/org.enterprisedomain.target.target</file>
 							<type>target</type>
 						</artifact>
@@ -68,12 +70,14 @@
 								<type>eclipse-feature</type>
 								<groupId>org.enterprisedomain</groupId>
 								<artifactId>org.enterprisedomain.ui.workbench.rcp.feature</artifactId>
-								<version>0.8.37-SNAPSHOT</version>
+						
+		<version>0.8.37-SNAPSHOT</version>
 							</requirement>
 							<requirement>
 								<type>eclipse-plugin</type>
 								<artifactId>org.enterprisedomain.classmaker.osgi.systemextension</artifactId>
-								<version>0.8.37-SNAPSHOT</version>
+						
+		<version>0.8.37-SNAPSHOT</version>
 							</requirement>
 						</extraRequirements>
 					</dependency-resolution>
