--- a/bundles/org.enterprisedomain.ecp.ui/plugin.xml
+++ b/bundles/org.enterprisedomain.ecp.ui/plugin.xml
@@ -11,4 +11,8 @@
       </uiProvider>
    </extension>
 
+
+<extension  point="org.eclipse.emf.ecp.view.model.provider.xmi.file">
+<file filePath="viewmodel/EOperationInvocation.view"/>
+</extension>
 </plugin>
