--- a/bundles/org.enterprisedomain.ecp/build.properties
+++ b/bundles/org.enterprisedomain.ecp/build.properties
@@ -1,4 +1,5 @@
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               plugin.properties
 source.. = src/
