Remove Completion Notification Adapter from UI
Signed-off-by: Kyrill Zotkin <143617+kyrillzotkin@users.noreply.github.com>

--- a/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
+++ b/bundles/org.enterprisedomain.classmaker.edit/plugin.properties
@@ -1,4 +1,4 @@
-# Copyright 2017 Kyrill Zotkin
+# Copyright 2017, 2021 Kyrill Zotkin
 # 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 pluginName = ClassMaker Edit Support
-providerName = www.example.org
+providerName = www.enterprisedomain.org
 
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} | {0}
@@ -193,3 +193,4 @@ _UI_Strategy_loaders_feature = Loaders
 _UI_Strategy_state_feature = State
 _UI_ClassMakerService_initializing_feature = Initializing
 _UI_Project_modelResourceAdapter_feature = Model Resource Adapter
+_UI_CompletionNotificationAdapter_project_feature = Project
