--- a/.github/workflows/delete_old_versions.yml
+++ b/.github/workflows/delete_old_versions.yml
@@ -18,3 +18,6 @@ jobs:
     steps:
       - name: Delete Package Versions
         uses: actions/delete-package-versions@v1.0.3
+        with:
+          package-name: 'org.enterprisedomain.org.enterprisedomain.*'
+          num-old-versions-to-delete: 1
