--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
        mvn -B clean package --file pom.xml
     - name: Deploy with Maven
       env:
-       BT_PAT: ${{ secrets.bat }}
+       BT_PAT: ${{ secrets.BT_TOKEN }}
       run: |
        echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?><settings xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.1.0 http://maven.apache.org/xsd/settings-1.1.0.xsd\" xmlns=\"http://maven.apache.org/SETTINGS/1.1.0\"xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"><servers><server><configuration><httpHeaders><property><name>Authorization</name><value>Bearer $BT_PAT</value></property></httpHeaders></configuration><id>github</id></server></servers><profiles><profile><repositories><repository><id>central</id><url>https://repo1.maven.org/maven2</url></repository><repository><id>github</id><url>https://maven.pkg.github.com/enterpriseDomain/*</url><snapshots><enabled>true</enabled></snapshots></repository></repositories><id>github</id></profile></profiles><activeProfiles><activeProfile>github</activeProfile></activeProfiles></settings>" > ~/.m2/settings.xml
        mvn clean deploy -s ~/.m2/settings.xml
